# Reverb

./: #CMakeLists.txt#  .gitignore  1_setup.ps1  1_setup.sh  1_setup_juce.sh  2_build.ps1  2_build.sh  2_build_juce.sh  3_exec.ps1  3_exec.sh  4_clean.ps1  4_clean.sh  C1_linux.ps1  C1_win.ps1  CMakeLists.txt  CMakeLists_old.txt  README.md  README_old.md  Template.jucer  build_juce.ps1  build_juce.sh  git_update.sh  liste.txt  makef.config  setup_juce.sh
Source/: JuceHeader.h  com.cc  com.h
Source/editor/: Makefile_tmp  Makefile_win32  PluginEditor.cc  PluginEditor.h  README_tmp  manager.cc  manager.h
Source/processor/: Edge.cc  Edge.h  PluginProcessor.cc  PluginProcessor.h
makef/: CMakeLists.txt  README.txt  liste.txt  makef.cc  makef.config
